--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
   </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+  <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <a class="navigation-logo" href="#">
+          <img class="page-header-logo" src="#" alt="Логотип интернет-магазина Device">
+        </a>
+        <ul class="navigation-list navigation-search">
+          <li class="navigation-item-search">
+            <label class="search">
+              <input class="search-input" type="search" name="search-field" placeholder="Поиск по сайту">
+            </label>
+          </li>
+          <li class="navigation-item-search">
+            <a class="button search-button" href="#">Найти</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item-user">
+            <a class="navigation-link" href="#">Войти</a>
+          </li>
+          <li class="navigation-item-user">
+            <a class="navigation-link" href="#"></a>
+          </li>
+          <li class="navigation-item-user">
+            <a class="navigation-link" href="#">Сравнить</a>
+          </li>
+          <li class="navigation-item-user">
+            <a class="navigation-link" href="#">Корзина</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-catalog">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Каталог товаров</a>
+          </li>
+        </ul>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Доставка</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Гарантия</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
   </body>
+
 </html>
