Исправляет li в поле "Каталог товаров"

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
           </li>
         </ul>
         <ul class="navigation-list navigation-catalog">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Каталог товаров</a>
+          <li class="navigation-item">Каталог товаров</li>
+          <li class="navigation-item catalog-button">
+            <button class="navigation-catalog-button">
+              <span class="visually-hidden">Посмотреть каталог товаров</span></button>
           </li>
         </ul>
         <ul class="navigation-list">
