Меняет текст на кнопку

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         </ul>
 
         <ul class="navigation-list navigation-catalog">
-          <li class="navigation-item">Каталог товаров</li>
+          <li class="navigation-item">
+            <button class="button button-navigation">Каталог товаров</button>
+          </li>
           <li class="navigation-item catalog-button">
             <button class="navigation-catalog-button">
               <span class="visually-hidden">Посмотреть каталог товаров</span>
