Добавляет вёрстку других слайдов
Не сразу заметил, что в макете есть условие:
Вёрстка всех слайдов в промо-слайдере и в блоке «Сервисы» обязательна.

Этим коммитом добавляю эти элементы

--- a/index.html
+++ b/index.html
@@ -115,6 +115,105 @@
         </ol>
       </section>
 
+      <section class="slider">
+        <h2 class="visually-hidden">Популярные товары</h2>
+        <img class="slider-image" src="" alt="Фото популярных товаров.">
+        <button class="slider-button slider-prev" type="button">
+          <span class="visually-hidden">Предыдущий товар</span>
+          <button class="slider-button slider-next" type="button">
+            <span class="visually-hidden">Следующий товар</span>
+          </button>
+      </section>
+
+      <section class="slider-info">
+        <h3 class="slider-info-title">Худеем правильно!</h3>
+        <p class="slider-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать
+          диету.</p>
+        <button class="button button-all" type="button">Подробнее</button>
+        <table class="table-info">
+          <caption class="visually-hidden">Характеристики товара</caption>
+          <tr class="table-row">
+            <td class="table-col">Без подзарядки</td>
+          </tr>
+          <tr class="table-row">
+            <td class="table-col">
+              <b class="table-char">48 часов</b>
+            </td>
+          </tr>
+        </table>
+        <ol class="slider-pagination">
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">1 Слайд</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button slider-pagination-button-current" type="button">
+              <span class="visually-hidden">2 Слайд</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">3 Слайд</span>
+            </button>
+          </li>
+        </ol>
+      </section>
+
+      <section class="slider">
+        <h2 class="visually-hidden">Популярные товары</h2>
+        <img class="slider-image" src="" alt="Фото популярных товаров.">
+        <button class="slider-button slider-prev" type="button">
+          <span class="visually-hidden">Предыдущий товар</span>
+          <button class="slider-button slider-next" type="button">
+            <span class="visually-hidden">Следующий товар</span>
+          </button>
+      </section>
+
+      <section class="slider-info">
+        <h3 class="slider-info-title">Делай селфи, как Бен Стиллер!</h3>
+        <p class="slider-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров
+          длиной и весом всего 5 кг.</p>
+        <button class="button button-all" type="button">Подробнее</button>
+        <table class="table-info">
+          <caption class="visually-hidden">Характеристики товара</caption>
+          <tr class="table-row">
+            <td class="table-col">Длина палки</td>
+            <td class="table-col">Вес палки</td>
+            <td class="table-col">Материал</td>
+          </tr>
+          <tr class="table-row">
+            <td class="table-col">
+              <b class="table-char">8,5 м</b>
+            </td>
+            <td class="table-col">
+              <b class="table-char">5 кг</b>
+            </td>
+            <td class="table-col">
+              <b class="table-char">Карбон</b>
+            </td>
+          </tr>
+        </table>
+        <ol class="slider-pagination">
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">1 Слайд</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">2 Слайд</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button slider-pagination-button-current" type="button">
+              <span class="visually-hidden">3 Слайд</span>
+            </button>
+          </li>
+        </ol>
+      </section>
+
+
       <section class="product-category">
         <h2 class="product-category-title">Категории товаров</h2>
         <ul class="product-category-list">
@@ -163,7 +262,7 @@
         <h2 class="advantages-title">Преимущества</h2>
         <ul class="advantages-list">
           <li class="advantages-item">
-            <button class="advantages-button" type="button">Доставка</button>
+            <button class="advantages-button advantages-button-current" type="button">Доставка</button>
           </li>
           <li class="advantages-item">
             <button class="advantages-button" type="button">Гарантия</button>
@@ -179,7 +278,52 @@
         <p class="advantages-text">Мы с удовольствием доставим ваш товар прямо
           к вашему подъезду совершенно бесплатно! Ведь
           мы неплохо заработаем, поднимая его на ваш этаж.</p>
-        <img class="advantages-description-img" src="" alt="Доставка товара к вашему подъезду">
+        <img class="advantages-description-img" src="" alt="Доставим товар к вашему подъезду">
+      </section>
+
+      <section class="advantages">
+        <h2 class="advantages-title">Преимущества</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <button class="advantages-button" type="button">Доставка</button>
+          </li>
+          <li class="advantages-item">
+            <button class="advantages-button advantages-button-current" type="button">Гарантия</button>
+          </li>
+          <li class="advantages-item">
+            <button class="advantages-button" type="button">Кредит</button>
+          </li>
+        </ul>
+      </section>
+
+      <section class="advantages-description">
+        <h3 class="advantages-description-title">Гарантия</h3>
+        <p class="advantages-text">Если из-за возгорания купленного у нас товара у вас
+          сгорит дом — не переживайте, мы выдадим вам новый.
+          Товар, не дом, конечно же.</p>
+        <img class="advantages-description-img" src="" alt="Гарантируем замену сорманного товара на новый">
+      </section>
+
+      <section class="advantages">
+        <h2 class="advantages-title">Преимущества</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <button class="advantages-button" type="button">Доставка</button>
+          </li>
+          <li class="advantages-item">
+            <button class="advantages-button" type="button">Гарантия</button>
+          </li>
+          <li class="advantages-item">
+            <button class="advantages-button  advantages-button-current" type="button">Кредит</button>
+          </li>
+        </ul>
+      </section>
+
+      <section class="advantages-description">
+        <h3 class="advantages-description-title">Кредит</h3>
+        <p class="advantages-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее
+          выгодные условия кредита. Выгодные для банка, разумеется.</p>
+        <img class="advantages-description-img" src="" alt="Подберём выгодный кредит">
       </section>
 
       <section class="unique-advantage">
