Добавляет вариант ответа в раскрывающийся список

--- a/catalog.html
+++ b/catalog.html
@@ -149,6 +149,7 @@
 
       <select class="select-control">
         <option value="popular">Популярные</option>
+        <option value="popular">NEW</option>
       </select>
       <a class="button button-price-up" href="#">
         <span class="visually-hidden">Сначала дешевые</span>
