--- a/3/index.html
+++ b/3/index.html
@@ -72,9 +72,10 @@
         <img class="slider-image" src="" alt="Фото популярных товаров.">
         <button class="slider-button slider-prev" type="button">
           <span class="visually-hidden">Предыдущий товар</span>
-          <button class="slider-button slider-next" type="button">
-            <span class="visually-hidden">Следующий товар</span>
-          </button>
+        </button>
+        <button class="slider-button slider-next" type="button">
+          <span class="visually-hidden">Следующий товар</span>
+        </button>
       </section>
 
       <section class="slider-info">
@@ -121,9 +122,10 @@
         <img class="slider-image" src="" alt="Фото популярных товаров.">
         <button class="slider-button slider-prev" type="button">
           <span class="visually-hidden">Предыдущий товар</span>
-          <button class="slider-button slider-next" type="button">
-            <span class="visually-hidden">Следующий товар</span>
-          </button>
+        </button>
+        <button class="slider-button slider-next" type="button">
+          <span class="visually-hidden">Следующий товар</span>
+        </button>
       </section>
 
       <section class="slider-info">
@@ -166,9 +168,10 @@
         <img class="slider-image" src="" alt="Фото популярных товаров.">
         <button class="slider-button slider-prev" type="button">
           <span class="visually-hidden">Предыдущий товар</span>
-          <button class="slider-button slider-next" type="button">
-            <span class="visually-hidden">Следующий товар</span>
-          </button>
+        </button>
+        <button class="slider-button slider-next" type="button">
+          <span class="visually-hidden">Следующий товар</span>
+        </button>
       </section>
 
       <section class="slider-info">
@@ -328,6 +331,7 @@
       </section>
 
       <section class="unique-advantage">
+        <h2 class="visually-hidden">Доставка под заказ</h2>
         <a class="unique-advantage-link" href="#">
           <p class="unique-advantage-text">Доставим редкий товар под заказ</p>
           <img class="unique-advantage-img" src="" alt="Доставка под заказ">
