--- a/catalog.html
+++ b/catalog.html
@@ -6,229 +6,206 @@
     <title>Каталог</title>
   </head>
 
-  <body>
-    <header class="page-header">
-      <nav class="navigation">
-        <a class="navigation-logo" href="#">
-          <img class="page-header-logo" src="" alt="Логотип интернет-магазина «Device»">
-        </a>
+  <header class="page-header">
+    <a class="page-header-link" href="#">
+      <img class="page-header-logo" src="" alt="Логотип интернет-магазина «Device»">
+    </a>
+    <div class="search-form-container">
+      <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
+        <label class="search">
+          <input class="search-input" type="search" name="search-field" placeholder="Поиск по сайту">
+        </label>
+        <button class="button seacrh-button" type="submit">Найти</button>
+      </form>
+      <a class="navigation-link" href="#">Войти</a>
+    </div>
+    <div class="user-link-container">
+      <a class="user-link" href="#">Сравнить</a>
+      <a class="user-link" href="#">Корзина</a>
+    </div>
+    <div class="catalog-container">
+      <button class="button button-navigation">Каталог товаров</button>
+      <button class="navigation-catalog-button">
+        <span class="visually-hidden">Посмотреть каталог товаров</span>
+      </button>
+    </div>
+    <nav class="navigation">
+      <button class="button button-navigation">Доставка</button>
+      <button class="button button-navigation">Гарантия</button>
+      <button class="button button-navigation">Контакты</button>
+    </nav>
+  </header>
 
-        <ul class="navigation-list navigation-search">
-          <li class="navigation-item-search">
-            <label class="search">
-              <input class="search-input" type="search" name="search-field" placeholder="Поиск по сайту"
-                value="Текст поиска">
-            </label>
-          </li>
-          <li class="navigation-item-search">
-            <a class="button search-button" href="#">Найти</a>
-          </li>
-        </ul>
-
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-item-user">
-            <a class="navigation-link" href="#">Коля Петухов</a>
-          </li>
-          <li class="navigation-item-user">
-            <a class="navigation-link" href="#">Выйти</a>
-          </li>
-          <li class="navigation-item-user">
-            <a class="navigation-link" href="#">Сравнить</a>
-          </li>
-          <li class="navigation-item-user">
-            <a class="navigation-link" href="#">Корзина</a>
-          </li>
-        </ul>
-
-        <ul class="navigation-list navigation-catalog">
-          <li class="navigation-item">
-            <button class="button button-navigation">Каталог товаров</button>
-          </li>
-          <li class="navigation-item catalog-button">
-            <button class="navigation-catalog-button">
-              <span class="visually-hidden">Посмотреть каталог товаров</span>
-            </button>
-          </li>
-        </ul>
-
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <button class="button button-navigation">Доставка</button>
-          </li>
-          <li class="navigation-item">
-            <button class="button button-navigation">Гарантия</button>
-          </li>
-          <li class="navigation-item">
-            <button class="button button-navigation">Контакты</button>
-          </li>
-        </ul>
-      </nav>
+  <main class="main-inner">
+    <header class="inner-header">
+      <h1 class="inner-header-title">Моноподы для селфи</h1>
+      <ul class="breadcrumbs">
+        <li class="breadcrumbs-item">
+          <a class="breadcrumbs-link" href="index.html">Главная</a>
+        </li>
+        <li class="breadcrumbs-item">
+          <a class="breadcrumbs-link" href="#">Каталог товаров</a>
+        </li>
+        <li class="breadcrumbs-item">
+          <a class="breadcrumbs-link">Моноподы для селфи</a>
+        </li>
+      </ul>
     </header>
 
-    <main class="main-inner">
-      <header class="inner-header">
-        <h1 class="inner-header-title">Моноподы для селфи</h1>
-        <ul class="breadcrumbs">
-          <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="index.html">Главная</a>
-          </li>
-          <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="#">Каталог товаров</a>
-          </li>
-          <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link">Моноподы для селфи</a>
-          </li>
-        </ul>
-      </header>
+    <section class="catalog-products">
+      <h2 class="catalog-products-title">Фильтр:</h2>
+      <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
 
-      <section class="catalog-products">
-        <h2 class="catalog-products-title">Фильтр:</h2>
-        <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+        <fieldset class="catalog-filter-group">
+          <legend class="catalog-filter-title">Цвет</legend>
+          <ul class="catalog-filter-list">
+            <li class="catalog-filter-item">
+              <label class="property">
+                <input class="property-input" type="checkbox" name="Черный" checked>
+                Черный
+              </label>
+            </li>
+            <li class="catalog-filter-item">
+              <label class="property">
+                <input class="property-input" type="checkbox" name="Белый" checked>
+                Белый
+              </label>
+            </li>
+            <li class="catalog-filter-item">
+              <label class="property">
+                <input class="property-input" type="checkbox" name="Синий">
+                Синий
+              </label>
+            </li>
+            <li class="catalog-filter-item">
+              <label class="property">
+                <input class="property-input" type="checkbox" name="Красный">
+                Красный
+              </label>
+            </li>
+            <li class="catalog-filter-item">
+              <label class="property">
+                <input class="property-input" type="checkbox" name="Розовый">
+                Розовый
+              </label>
+            </li>
+          </ul>
+        </fieldset>
 
-          <fieldset class="catalog-filter-group">
-            <legend class="catalog-filter-title">Цвет</legend>
-            <ul class="catalog-filter-list">
-              <li class="catalog-filter-item">
-                <label class="color">
-                  <input class="color-input" type="checkbox" name="Черный" checked>
-                  Черный
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="color">
-                  <input class="color-input" type="checkbox" name="Белый" checked>
-                  Белый
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="color">
-                  <input class="color-input" type="checkbox" name="Синий">
-                  Синий
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="color">
-                  <input class="color-input" type="checkbox" name="Красный">
-                  Красный
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="color">
-                  <input class="color-input" type="checkbox" name="Розовый">
-                  Розовый
-                </label>
-              </li>
-            </ul>
-          </fieldset>
+        <fieldset class="catalog-filter-group">
+          <legend class="catalog-filter-title">Bluetooth</legend>
+          <ul class="catalog-filter-list">
+            <li class="catalog-filter-item">
+              <label class="property">
+                <input class="property-input" type="radio" name="product-group" value="yes" checked>
 
-          <fieldset class="catalog-filter-group">
-            <legend class="catalog-filter-title">Bluetooth</legend>
-            <ul class="catalog-filter-list">
-              <li class="catalog-filter-item">
-                <label class="bluetooth">
-                  <input class="bluetooth-input" type="radio" name="product-group" value="yes" checked>
+                Есть
+              </label>
+            </li>
+            <li class="catalog-filter-item">
+              <label class="property">
+                <input class="property-input" type="radio" name="product-group" value="no">
 
-                  Есть
-                </label>
-              </li>
-              <li class="catalog-filter-item">
-                <label class="bluetooth">
-                  <input class="bluetooth-input" type="radio" name="product-group" value="no">
+                Нет
+              </label>
+            </li>
+          </ul>
+        </fieldset>
 
-                  Нет
-                </label>
-              </li>
-            </ul>
-          </fieldset>
+        <button class="button" type="submit">Показать</button>
+      </form>
+    </section>
 
-          <button class="button" type="submit">Показать</button>
-        </form>
-      </section>
-
+    <section class="sorting-menu">
       <h2 class="select-control-title">Сортировка:</h2>
 
       <select class="select-control">
         <option value="popular">Популярные</option>
         <option value="popular">NEW</option>
       </select>
-      <a class="button button-price-up" href="#">
+      <button class="sorting-menu-button">
         <span class="visually-hidden">Сначала дешевые</span>
-      </a>
-      <a class="button button-price-down" href="#">
+      </button>
+      <button class="sorting-menu-button">
         <span class="visually-hidden">Сначала дорогие</span>
-      </a>
+      </button>
+    </section>
 
-      <ul class="product-list">
-        <li class="product-card">
-          <a class="product-card-link" href="#">
-            <img class="product-card-image" src="" alt="Фотография любительской селфи-палки">
-            <h3 class="product-card-title">Любительская селфи-палка</h3>
-          </a>
-          <span class="product-card-price">500 ₽</span>
-        </li>
-        <li class="product-card">
-          <a class="product-card-link" href="#">
-            <img class="product-card-image" src="" alt="Фотография профессиональной селфи-палки">
-            <h3 class="product-card-title">Профессиональная селфи-палка</h3>
-          </a>
-          <span class="product-card-price">1 500 ₽</span>
-        </li>
-        <li class="product-card">
-          <a class="product-card-link" href="#">
-            <img class="product-card-image" src="" alt="Фотография непотопляемой селфи-палки">
-            <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
-          </a>
-          <span class="product-card-price">2 500 ₽</span>
-        </li>
-        <li class="product-card">
-          <a class="product-card-link" href="#">
-            <img class="product-card-image" src="" alt="Фотография селфи-палки в виде руки">
-            <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
-          </a>
-          <span class="product-card-price">1 500 ₽</span>
-        </li>
-      </ul>
-      <button class="button pagination-show-more" type="button">Загрузить ещё</button>
-
-      <ul class="pagination">
-        <li class="pagination-item">
-          <a class="pagination-link pagination-prev-disabled" href="">
-            <span class="pagination-prev">Назад</span>
-          </a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link pagination-number" href="">1</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link pagination-number" href="">2</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link pagination-number" href="">3</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link pagination-number" href="">...</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link pagination-number" href="">15</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link pagination-next" href="">
-            <span class="pagination-next">Вперёд</span>
-          </a>
-        </li>
-      </ul>
-    </main>
-
-    <footer class="page-footer">
-      <section class="footer-contacts">
-        <h2 class="visually-hidden">Адрес</h2>
-        <img class="footer-contacts-logo" src="" alt="Логотип интернет-магазина «Device»">
-        <address class="cotacts-address">
-          <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-        </address>
+    <section class="product-list">
+      <section class="prouct-card">
+        <a class="product-card-link" href="#">
+          <img class="product-card-image" src="" alt="Фотография любительской селфи-палки">
+          <h3 class="product-card-title">Любительская селфи-палка</h3>
+        </a>
+        <span class="product-card-price">500 ₽</span>
+      </section>
+      <section>
+        <a class="product-card-link" href="#">
+          <img class="product-card-image" src="" alt="Фотография профессиональной селфи-палки">
+          <h3 class="product-card-title">Профессиональная селфи-палка</h3>
+        </a>
+        <span class="product-card-price">1 500 ₽</span>
+      </section>
+      <section>
+        <a class="product-card-link" href="#">
+          <img class="product-card-image" src="" alt="Фотография непотопляемой селфи-палки">
+          <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
+        </a>
+        <span class="product-card-price">2 500 ₽</span>
+      </section>
+      <section>
+        <a class="product-card-link" href="#">
+          <img class="product-card-image" src="" alt="Фотография селфи-палки в виде руки">
+          <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
+        </a>
+        <span class="product-card-price">1 500 ₽</span>
       </section>
 
-      <section class="footer-social">
+      <button class="button pagination-show-more" type="button">Загрузить ещё</button>
+
+      <section class="pagination-menu">
+        <ul class="pagination">
+          <li class="pagination-item">
+            <a class="pagination-link pagination-prev-disabled" href="">
+              <span class="pagination-prev">Назад</span>
+            </a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link pagination-number" href="">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link pagination-number" href="">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link pagination-number" href="">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link pagination-number" href="">...</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link pagination-number" href="">15</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link pagination-next" href="">
+              <span class="pagination-next">Вперёд</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </section>
+  </main>
+
+  <footer class="page-footer">
+    <section class="footer-contacts">
+      <h2 class="visually-hidden">Адрес</h2>
+      <img class="footer-contacts-logo" src="" alt="Логотип интернет-магазина «Device»">
+      <address class="cotacts-address">
+        <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+      </address>
+    </section>
+
+    <section class="footer-nav-socials">
+      <section class="footer-navigation">
         <h2 class="visually-hidden">Наши преимущества</h2>
         <ul class="footer-advantages-list">
           <li class="footer-advantages-item">
@@ -241,37 +218,37 @@
             <button class="button button-footer-category">Контакты</button>
           </li>
         </ul>
+      </section>
 
+      <section class="footer-social">
         <h2 class="visually-hidden">Наши социальные сети</h2>
-        <ul class="footer-social-list">
-          <li class="footer-social-item">
-            <a class="social-button" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Телеграм</span>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Ютьюб</span>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="social-button" href="https://twitter.com/htmlacademy_ru">
-              <span class="visually-hidden">Твиттер</span>
-            </a>
-          </li>
-        </ul>
+        <div class="telegram">
+          <a class="social-button" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Телеграм</span>
+          </a>
+        </div>
+        <div class="youtube">
+          <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Ютьюб</span>
+        </div>
+        <div class="twitter">
+          <a class="social-button" href="https://twitter.com/htmlacademy_ru">
+            <span class="visually-hidden">Твиттер</span>
+          </a>
+        </div>
       </section>
+    </section>
 
-      <section class="footer-connection">
-        <h2 class="visually-hidden">Позвоните нам</h2>
-        <address class="cotacts-address">
-          <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        </address>
-        <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-          <img class="about-text" src="" alt="html-academy-logo">
-        </a>
-      </section>
-    </footer>
+    <section class="footer-connection">
+      <h2 class="visually-hidden">Позвоните нам</h2>
+      <address class="cotacts-address">
+        <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </address>
+      <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+        <img class="about-text" src="" alt="html-academy-logo">
+      </a>
+    </section>
+  </footer>
   </body>
 
 </html>
