Меняет section на div в футере

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       </section>
 
       <section class="footer-nav-socials">
-        <section class="footer-navigation">
+        <div class="footer-navigation">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="footer-advantages-list">
             <li class="footer-advantages-item">
@@ -296,9 +296,9 @@
               <button class="button button-footer-category">Контакты</button>
             </li>
           </ul>
-        </section>
+        </div>
 
-        <section class="footer-social">
+        <div class="footer-social">
           <h2 class="visually-hidden">Наши социальные сети</h2>
           <div class="telegram">
             <a class="social-button" href="https://t.me/htmlacademy">
@@ -314,7 +314,7 @@
               <span class="visually-hidden">Твиттер</span>
             </a>
           </div>
-        </section>
+        </div>
       </section>
 
       <section class="footer-connection">
