Изменяет названия классов в категории продуктов

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
       </section>
 
       <section class="product-category">
-        <div class="container">
-          <h2 class="product-category-title">Категории товаров</h2>
+        <div class="product-category-container">
+          <h2 class="visually-hidden">Категории товаров</h2>
           <a class="product-category-link" href="#">
             <img class="product-category-img" src="" alt="Иконка VR">
             <p class="product-category-description">Виртуальная
