Меняет название класса в блоке «Unique-advantage»

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       </section>
 
       <section class="unique-advantage">
-        <div class="container">
+        <div class="unique-advantage-container">
           <h2 class="visually-hidden">Доставка под заказ</h2>
           <button class="unique-advantage-button">
             <div class="img-block">
