Добавляет логотип HTML Academy в футер

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
           <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-            <img class="about-text" src="" alt="html-academy-logo">
+            <img class="about-text" src="images/html-academy-icon.svg" width="115" height="33" alt="html-academy-logo">
           </a>
         </section>
       </div>
